# OpenGLES-Web-Demo

./: CMakeLists.txt  CMakePresets.json  README.md  build-web.sh
include/glad/: CMakeLists.txt  cmake_install.cmake  glad.c
include/glad/include/glad/: glad.h
res/: icon.tga  map_file.ldtk
res/desktop-shaders/: default.frag
res/es-shaders/: shader.frag  shader.vert
src/: core.cpp  shader.h
web-build/: .ninja_deps  .ninja_log  CMakeCache.txt  SokobanGameDemo.data  SokobanGameDemo.html  SokobanGameDemo.js  SokobanGameDemo.wasm  build.ninja  cmake_install.cmake
web-build/include/glad/: cmake_install.cmake
